Some fixes to responsive layout. Second page still needs optimization on smaller screens (350*650). Navbar still needs to be a burger

--- a/src/index.css
+++ b/src/index.css
@@ -172,6 +172,11 @@ button span {
     background-image: none;
   }
 
+  nav {
+    backdrop-filter: none;
+    -webkit-backdrop-filter: none;
+  }
+
   #fp-nav span {
     display: none;
   }
