--- a/src/pages/firstpage.css
+++ b/src/pages/firstpage.css
@@ -27,26 +27,23 @@
   .media-switch {
     flex-direction: column-reverse;
     align-items: center !important;
-    margin-top: 2rem;
     margin-bottom: 0 !important;
+    justify-content: center !important;
+    margin-top: 2rem !important;
   }
   .ctn-profile {
-    width: 300px;
-    height: 300px;
+    height: 40%;
     overflow: visible;
-  }
-  .ctn-profile img {
-    left: 0;
   }
 
   .bkgr {
-    width: 350px;
-    height: 180px;
+    left: 40px;
+    width: 80%;
+    height: 65%;
   }
-  
+
   #first h1 {
     font-size: 3.2em !important;
-    padding-top: 1rem;
   }
   #first h4 {
     font-size: 1.1em !important;
@@ -57,8 +54,5 @@
     font-weight: 400;
     margin: 1rem 0;
     padding: 0 1rem;
-  }
-  #first button {
-    margin-top: 2rem;
   }
 }
