--- a/src/pages/thirdpage.css
+++ b/src/pages/thirdpage.css
@@ -35,7 +35,4 @@ label[data-shrink="true"] {
   #third h4 {
     font-size: 2em;
   }
-  .form {
-    margin-bottom: 2rem;
-  }
 }
